RESOLVED FIXED180534
Activate IDB and WebSockets in service workers
https://bugs.webkit.org/show_bug.cgi?id=180534
Summary Activate IDB and WebSockets in service workers
youenn fablet
Reported 2017-12-07 10:22:12 PST
Activate IDB and WebSockets in service workers
Attachments
Patch (12.67 KB, patch)
2017-12-07 10:27 PST, youenn fablet
no flags
Patch for landing (15.26 KB, patch)
2017-12-07 13:09 PST, youenn fablet
no flags
Patch for landing (15.26 KB, patch)
2017-12-07 13:12 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-12-07 10:27:17 PST
EWS Watchlist
Comment 2 2017-12-07 10:28:33 PST
Attachment 328702 [details] did not pass style-queue: ERROR: Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:75: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3 2017-12-07 10:30:47 PST
Cannot we unskip the websocket in WPT?
youenn fablet
Comment 4 2017-12-07 10:44:30 PST
(In reply to Chris Dumez from comment #3) > Cannot we unskip the websocket in WPT? I can try but this test relies on WPT ws socket server. One of the service worker web socket test is flaky due to certificate issues.
youenn fablet
Comment 5 2017-12-07 11:00:37 PST
(In reply to youenn fablet from comment #4) > (In reply to Chris Dumez from comment #3) > > Cannot we unskip the websocket in WPT? > > I can try but this test relies on WPT ws socket server. > One of the service worker web socket test is flaky due to certificate issues. WPT test of web socket in service worker is running locally consistently (still failing though, getting an onerror event). I will unskip it at landing time or in another version of this patch.
youenn fablet
Comment 6 2017-12-07 13:09:13 PST
Created attachment 328721 [details] Patch for landing
EWS Watchlist
Comment 7 2017-12-07 13:10:40 PST
Attachment 328721 [details] did not pass style-queue: ERROR: Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:75: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8 2017-12-07 13:10:49 PST
Comment on attachment 328721 [details] Patch for landing Rejecting attachment 328721 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 328721, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/imported/w3c/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/5533024
youenn fablet
Comment 9 2017-12-07 13:12:16 PST
Created attachment 328723 [details] Patch for landing
EWS Watchlist
Comment 10 2017-12-07 13:13:47 PST
Attachment 328723 [details] did not pass style-queue: ERROR: Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:75: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 11 2017-12-07 13:46:14 PST
Comment on attachment 328723 [details] Patch for landing Clearing flags on attachment: 328723 Committed r225644: <https://trac.webkit.org/changeset/225644>
WebKit Commit Bot
Comment 12 2017-12-07 13:46:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2017-12-07 13:48:31 PST
Note You need to log in before you can comment on or make changes to this bug.