Activate IDB and WebSockets in service workers https://bugs.webkit.org/show_bug.cgi?id=180534

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-07
Reviewed by Brady Eidson.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/websocket-in-service-worker.https-expected.txt:

Source/WebCore:

Tests: http/tests/workers/service/serviceworker-idb.https.html
       http/tests/workers/service/serviceworker-websocket.https.html

Using the dummy document used for loading to also fuel IDB and WebSocket.

* workers/service/context/ServiceWorkerThread.cpp:
(WebCore::ServiceWorkerThread::ServiceWorkerThread):
* workers/service/context/ServiceWorkerThread.h:
* workers/service/context/ServiceWorkerThreadProxy.cpp:
(WebCore::idbConnectionProxy):
(WebCore::ServiceWorkerThreadProxy::ServiceWorkerThreadProxy):

LayoutTests:

* http/tests/workers/service/resources/serviceworker-idb-worker.js: Added.
* http/tests/workers/service/resources/serviceworker-websocket-worker.js: Added.
* http/tests/workers/service/serviceworker-idb.https-expected.txt: Added.
* http/tests/workers/service/serviceworker-idb.https.html: Added.
* http/tests/workers/service/serviceworker-websocket.https-expected.txt: Added.
* http/tests/workers/service/serviceworker-websocket.https.html: Added.

Canonical link: https://commits.webkit.org/196464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225644 268f45cc-cd09-0410-ab3c-d52691b4dbfc